Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-6420

gdi32: CreateDIBitmap fixes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.3.15
    • Win32SS
    • None
    • Operating System: ReactOS
      Platform: x86 Hardware

    Description

      Created an attachment (id=7695)
      Patch for CreateDIBitmap

      Fixed the following problems:
      1)If there is no header, then set the corresponding Error: Error_Invalid_Parameter
      2)Check if the BiCompression param is valid.CreateDIBitmap doesn't support BI_JPEG, BI_PNG neither BI_BITFIELDS. Don't set any Error.
      3)Check if the biClr is valid in the BitmapInfoHeader. CreateDIBitmap just support DIB_RGB_COLORS, DIB_PAL_COLORS and the undocumented("2"). Set the proper Error: Error_Invalid_Parameter
      4)Check if biWidth is negative. CreateDIBitmap doesn't support negative values.
      5)Check if biHeight is negative. CretateDIBitmap supports Top-Down DIBs.

      Attachments

        1. bitmap.c.patch
          1 kB
          vicmarcal
        2. bitmapadded.patch
          3 kB
          vicmarcal
        3. bitmap3.patch
          3 kB
          vicmarcal
        4. bitmap4.patch
          3 kB
          vicmarcal

        Activity

          People

            ThePhysicist Timo Kreuzer
            vicmarcal vicmarcal
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: