[GDI32] - Some fixes for CreateDIBitmap (Patch by Victor Martinez, modified by me) CORE-6420 #resolve - Fix warning on MSVC

svn path=/trunk/; revision=57440